Services changed to ourService

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -24,10 +24,10 @@
                 <div class="col-lg-3 col-sm-6">
                     <h5 class="mb-0 text-white">SERVICES</h5>
                     <div class="line"></div>
-                        <li><a href="">Food Industry</a></li>
-                        <li><a href="">Certifications</a></li>
-                        <li><a href="">Auditing</a></li>
-                        <li><a href="">Solutions & Services</a></li>
+                        <li><a href="ourService">Food Industry</a></li>
+                        <li><a href="ourService">Certifications</a></li>
+                        <li><a href="ourService">Auditing</a></li>
+                        <li><a href="ourService">Solutions & Services</a></li>
                     
                 </div>
                 <div class="col-lg-3 col-sm-6">
