--- a/src/app/pages/our-service/our-service.component.html
+++ b/src/app/pages/our-service/our-service.component.html
@@ -2,7 +2,7 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet"
 />
-<section id="services" class="section-padding">
+<section id="ourService" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
@@ -21,7 +21,7 @@
                         <i class="ri-stack-fill"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Food industries</h5>
-                    <ul class="home-content-services">
+                    <ul class="home-content-ourService">
                         <li>Fish and Fish products Processing</li>
                         <li>Meat Processing</li>
                         <li>Snacks Industries</li>
@@ -40,7 +40,7 @@
                         <i class="ri-stack-fill"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Other industries</h5>
-                    <ul class="home-content-services">
+                    <ul class="home-content-ourService">
                         <li>Distilleries</li>
                         <li>Starch Industries</li>
                         <li>Retail Sector</li>
@@ -57,7 +57,7 @@
                         <i class="ri-stack-fill"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Certifications</h5>
-                    <ul class="home-content-services">
+                    <ul class="home-content-ourService">
                         <li>HACCP certification</li>
                         <li>BRC FOOD certification</li>
                         <li>FSSC certification</li>
@@ -72,7 +72,7 @@
                         <i class="ri-stack-fill"></i>
                     </div>
                     <h5 class="mt-4 mb-3">ISO Certifications</h5>
-                    <ul class="home-content-services">
+                    <ul class="home-content-ourService">
                         <li>ISO 22000 certification</li>
                         <li>ISO 9001 certification</li>
                         <li>ISO 17025</li>
@@ -85,7 +85,7 @@
                         <i class="ri-stack-fill"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Auditing, Solutions & Services</h5>
-                    <ul class="home-content-services">
+                    <ul class="home-content-ourService">
                         <li>Internal Auditing</li>
                         <li>IT solutions</li>
                         <li>Validation verification services</li>
