--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -23,7 +23,7 @@
                         <a href="#" class="nav-link active"> Home </a>
                     </li>
                     <li class="nav-item active">
-                        <a href="/services" class="nav-link">Services</a>
+                        <a href="/ourService" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item active">
                         <a href="/courses" class="nav-link">Courses</a>
@@ -35,7 +35,7 @@
                         <a href="contactus" class="nav-link">Contact Us</a>
                     </li>
                 </ul>
-                <a href="" class="btn btn-brand ms-lg-3">Sign-in</a>
+                <a href="/signin" class="btn btn-brand ms-lg-3">Sign-in</a>
             </div>
         </div>
         </nav>
