--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,1 +1,28 @@
-<p>sign-in works!</p>
+<section id="contact" class="section-padding bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="section-title">
+                    <h1 class ="display-4 text-white fw-semibold">Welcome back!!!</h1>
+                    <div class="line bg-white"></div>
+                    <p class="text-white">Please enter credentials to sign-in to your account.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <form action="" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                    <div class="form-group col-lg-12">
+                        <input type="text" class="form-control" placeholder="Username">
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <input type="email" class="form-control" placeholder="Email address">
+                    </div>
+                    <div class="form-group col-lg-12 d-grid">
+                        <button class="btn btn-brand">SIGN IN</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
