--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -35,7 +35,10 @@
                         <a href="contactus" class="nav-link">Contact Us</a>
                     </li>
                 </ul>
-                <a href="/signin" class="btn btn-brand ms-lg-3">Sign-in</a>
+                @if(token())
+                {<a href="#" class="btn btn-brand ms-lg-3" (click)="logout()">Logout</a>}
+                @else 
+                {<a href="/signin" class="btn btn-brand ms-lg-3">Sign-in</a>}
             </div>
         </div>
         </nav>
