--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -11,15 +11,15 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <form action="" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                <form action="" class="row g-3 p-lg-5 p-4 bg-white theme-shadow" [formGroup]="regForm" (ngSubmit)="register()">
                     <div class="form-group col-lg-12">
-                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="text" class="form-control" placeholder="Username" formControlName="username">
                     </div>
                     <div class="form-group col-lg-12">
-                        <input type="email" class="form-control" placeholder="Email address">
+                        <input type="password" class="form-control" placeholder="Password" formControlName="password">
                     </div>
                     <div class="form-group col-lg-12 d-grid">
-                        <button class="btn btn-brand">SIGN IN</button>
+                        <button type="submit" class="btn btn-brand">SIGN IN</button>
                     </div>
                 </form>
             </div>
