--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section id="courses" class="section-padding">
     <div class="container">
         <div class="row">
@@ -73,3 +74,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
