--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section id="home" class="min-vh-100 d-flex align-items-center text-center">
     <div class="container">
         <div class="row">
@@ -12,3 +13,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
