--- a/src/app/pages/our-service/our-service.component.html
+++ b/src/app/pages/our-service/our-service.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -118,3 +119,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
