--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section id="contact" class="section-padding bg-light">
     <div class="container">
         <div class="row">
@@ -21,8 +22,13 @@
                     <div class="form-group col-lg-12 d-grid">
                         <button type="submit" class="btn btn-brand">SIGN IN</button>
                     </div>
+                    <div class="col-lg-12 d-grid">
+                        Are you new here? <a href="/signup" class="ms-lg-9">Sign-Up</a>
+                    </div>
                 </form>
+                
             </div>
         </div>
     </div>
 </section>
+<app-footer></app-footer>
