--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,5 +1,4 @@
 <header>
-    
         <nav class="navbar navbar-expand-lg bg-white sticky-top">
             <div class="container">
             <a href="#" class="navbar-brand mb-0 h1">
@@ -35,10 +34,17 @@
                         <a href="contactus" class="nav-link">Contact Us</a>
                     </li>
                 </ul>
-                @if(token())
-                {<a href="#" class="btn btn-brand ms-lg-3" (click)="logout()">Logout</a>}
-                @else 
-                {<a href="/signin" class="btn btn-brand ms-lg-3">Sign-in</a>}
+                <!-- <a href="#" *ngIf="isAuthenticated" class="btn btn-brand ms-lg-3" (click)="logout()">Logout</a>
+                <a href="/signin" *ngIf="!isAuthenticated" class="btn btn-brand ms-lg-3">Sign-in</a> -->
+
+                <!-- @if("isAuthenticated"){<a href="#" class="btn btn-brand ms-lg-3" (click)="logout()">Logout</a>}
+                
+                
+                @else if("!isAuthenticated"){<a href="/signin" class="btn btn-brand ms-lg-3">Sign-in</a>} -->
+
+                <a href="#" *ngIf="isAuthenticated" class="btn btn-brand ms-lg-3" (click)="logout()">Logout</a>
+                <a href="/signin" *ngIf="!isAuthenticated" class="btn btn-brand ms-lg-3">Sign-in</a>
+                
             </div>
         </div>
         </nav>
