--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section id="contact" class="section-padding bg-light">
     <div class="container">
         <div class="row">
@@ -35,3 +36,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
