Updated Home page

--- a/src/app/pages/admin-dashboard/layouts/header-admin/header-admin.component.html
+++ b/src/app/pages/admin-dashboard/layouts/header-admin/header-admin.component.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item active">
-                    <a href="#" class="nav-link active">Attendance</a>
+                    <a href="/admindashboard" class="nav-link active">Attendance</a>
                 </li>
                 <li class="nav-item active">
                     <a href="/ourService" class="nav-link">Services</a>
