--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,9 +6,214 @@
                 <h1 class="text-white fw-semibold display-1">Welcome to AJAS Services</h1>
                 <h5 class="text-white mt-3 mb-4">We provide consultancy services for all the Quality Management Systems, Food Safety Management Systems, and Designing client specific standards.</h5>
                 <div>
-                    <a href="" class="btn btn-brand me-2">Explore</a>
+                    <a href="/ourService" class="btn btn-brand me-2">Services</a>
                     <a href="/courses" class="btn btn-light ms-2">Live Courses</a>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Services -->
+<link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+<section id="ourService" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="section-title">
+                    <h1 class ="display-4 fw-semibold"><a href="/ourService" style="color: black;">Services</a></h1>
+                    <div class="line"></div>
+                    <p>Consultancy services for all the Quality Management Systems, Food Safety Management Systems, and designing client specific standards.</p>
+                    <p>We believe Quality Management System is a key management practice to bring together on-going involvement across organization boundaries, benefits realization, organization change, planning, coordination and integration, but requires a focused Program Manager.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row g-4 text-center justify-content-around">
+            <div class="col-lg-4 col-sm-6">
+                <div class="service theme-shadow p-lg-5 p-4">
+                    <div class="iconbox">
+                        <i class="ri-stack-fill"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Food industries</h5>
+                    <ul class="home-content-ourService">
+                        <li>Fish and Fish products Processing</li>
+                        <li>Meat Processing</li>
+                        <li>Snacks Industries</li>
+                        <li>Fresh Frozen Fruit and Vegetables</li>
+                        <li>Fruit pulp Industries</li>
+                        <li>Flour Industries</li>
+                        <li>Spice Industries</li>
+                        <li>Sugar Industries</li>
+                        <li>Packaged Drinking Water</li>
+                    </ul> 
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="service theme-shadow p-lg-5 p-4">
+                    <div class="iconbox">
+                        <i class="ri-stack-fill"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Other industries</h5>
+                    <ul class="home-content-ourService">
+                        <li>Distilleries</li>
+                        <li>Starch Industries</li>
+                        <li>Retail Sector</li>
+                        <li>Hotel, Resorts & Restaurants</li>
+                        <li>Agriculture Sector</li>
+                        <li>Laboratory Support</li>
+                        <li>Warehousing, Logistics and Supply Chain</li>
+                    </ul> 
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="service theme-shadow p-lg-5 p-4">
+                    <div class="iconbox">
+                        <i class="ri-stack-fill"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Certifications</h5>
+                    <ul class="home-content-ourService">
+                        <li>HACCP certification</li>
+                        <li>BRC FOOD certification</li>
+                        <li>FSSC certification</li>
+                        <li>Global Gap certification</li>
+                        <li>BRC Packaging certification</li>
+                    </ul> 
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="service theme-shadow p-lg-5 p-4">
+                    <div class="iconbox">
+                        <i class="ri-stack-fill"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">ISO Certifications</h5>
+                    <ul class="home-content-ourService">
+                        <li>ISO 22000 certification</li>
+                        <li>ISO 9001 certification</li>
+                        <li>ISO 17025</li>
+                    </ul> 
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="service theme-shadow p-lg-5 p-4">
+                    <div class="iconbox">
+                        <i class="ri-stack-fill"></i>
+                    </div>
+                    <h5 class="mt-4 mb-3">Auditing, Solutions & Services</h5>
+                    <ul class="home-content-ourService">
+                        <li>Internal Auditing</li>
+                        <li>IT solutions</li>
+                        <li>Validation verification services</li>
+                        <li>Cleaning and sanitation solution</li>
+                    </ul> 
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-around">
+        <div class="line col-12 text-center">
+            <!-- <p class="mt-3 mb-4">Check services in detail</p> -->
+            <div>
+                <a href="/ourService" class="btn btn-brand me-2">Know more...</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- About Us -->
+<!-- <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/> -->
+<section id="about" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="section-title">
+                    <h1 class="display-4 fw-semibold"><a href="/ourService" style="color: black;">About us</a></h1>
+                    <div class="line"></div>
+                    <p>At AJAS Services, we specialize in providing consultancy services for Quality Management Systems (QMS), Food Safety Management Systems (FSMS), and designing client-specific standards. Our team consists of experienced professionals with a deep understanding of quality management principles, food safety regulations, and industry-specific standards.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-around align-itmes-center">
+            <div class="col-lg-6">
+                <img src="../../../assets/about.jpg" alt="About">
+            </div>
+            <div class="col-lg-5">
+                <div class="d-flex">
+                    <div class="iconbox me-4">
+                        <i class="ri-line-chart-line"></i>
+                    </div>
+                    <div>
+                        <h5 class="mt-2 mb-4">Our Mission</h5>
+                        <p>We are dedicated to providing our customers with tailored solutions that enhance their organization's operations while ensuring compliance with relevant standards. Our goal is to help our clients meet statutory and regulatory requirements, improve efficiency, and achieve excellence in quality and food safety.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="iconbox me-4">
+                        <i class="ri-account-pin-box-line"></i>
+                    </div>
+                    <div>
+                        <h5 class="mt-2 mb-4">Meet the man behind</h5>
+                        <p>Anil Zapate - CEO</p>
+                        <p>Anil is an esteemed industry professional with over 18 years of experience, specializing in auditing, consulting, and achieving certifications such as HACCP, BRC, and ISO standards for a diverse range of products. His expertise extends to collaborating with major companies, implementing customer-specific requirements, and developing comprehensive food safety management systems.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="iconbox me-4">
+                        <i class="ri-megaphone-line"></i>
+                    </div>
+                    <div>
+                        <h5 class="mt-2 mb-4">Why Choose Us?</h5>
+                        <p>Our team boasts extensive expertise in QMS, FSMS, and standard design, offering tailored solutions to meet client needs. We prioritize compliance by staying abreast of statutory requirements and collaborate closely with clients for customized standards aligned with their objectives.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="row justify-content-around">
+            <div class="line col-12 text-center">
+                <p class="mt-3 mb-4">Ready to take your organization's quality and food safety management to the next level? Contact us today to learn more about how we can help you achieve your goals.</p>
+                <div>
+                    <a href="/contactus" class="btn btn-brand me-2">Contact us</a>
+                </div>
+            </div>
+        </div> -->
+    </div>
+</section>
+<section id="contact" class="section-padding bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="section-title">
+                    <h1 class ="display-4 text-white fw-semibold"><a href="/ourService" style="color: White;">Get in touch</a></h1>
+                    <div class="line bg-white"></div>
+                    <p class="text-white">Have a question, comment, or suggestion? We'd love to hear from you! Please feel free to reach out to us using the contact information provided below or fill out the contact form, and we'll get back to you as soon as possible.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <form action="" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                    <div class="form-group col-lg-6">
+                        <input type="text" class="form-control" placeholder="First name">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <input type="text" class="form-control" placeholder="Last name">
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <input type="email" class="form-control" placeholder="Email address">
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <input type="text" class="form-control" placeholder="Subject">
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <textarea name="message" rows="5" class="form-control" placeholder="Message" id=""></textarea>
+                    </div>
+                    <div class="form-group col-lg-12 d-grid">
+                        <button class="btn btn-brand">Send Message</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
